examples/passing/ExportExplicit.purs
module Main where

import Control.Monad.Eff.Console (log)
import M1

testX = X
testZ = Z
testFoo = foo

main = log "Done"
